# personal-health-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/: requirements-personal-health-mcp_tanita.md  requirements-review-v1.0.md  requirements-review-v1.2.md  requirements-review-v1.3.md
src/health_mcp/: config.py  server.py
src/health_mcp/storage/: sqlite.py
src/health_mcp/tanita/: __main__.py  auth.py  client.py  models.py
tests/: test_auth.py  test_client.py  test_storage.py
