[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-health-mcp"
version = "0.1.0"
description = "Tanita HealthPlanet MCP server for body composition data"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "authlib>=1.3",
    "python-dotenv>=1.0",
]

[project.scripts]
health-mcp = "health_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/health_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
